# spring_boot_entity_class_maker

./: .gitignore  README.md  pyproject.toml
app/: main.py  template.env
app/utilities/: settings.py
