[project]
name = "entity-class-maker"
version = "0.1.0"
description = ""
authors = [
    {name = "newbie79",email = "newbie79@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mariadb (>=1.1.12,<2.0.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
